--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,4 +3,5 @@
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+     stdlib: "puppetlabs/stdlib"
+     yumrepo_core: "puppetlabs/yumrepo_core"
