--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@
 stages:
   - syntax
   - unit
+  - build
 
 cache:
   paths:
@@ -20,6 +21,10 @@ syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore c
   image: ruby:2.5.3
   script:
     - bundle exec rake syntax lint metadata_lint check:symlinks check:git_ignore check:dot_underscore check:test_file rubocop
+  only:
+    changes:
+      - Gemfile
+      - "*.{json,pp,rb,yml}"
   variables:
     PUPPET_GEM_VERSION: '~> 6'
 
@@ -28,6 +33,10 @@ parallel_spec-Ruby 2.5.3-Puppet ~> 6:
   image: ruby:2.5.3
   script:
     - bundle exec rake parallel_spec
+  only:
+    changes:
+      - Gemfile
+      - "*.{json,pp,rb,yml}"
   variables:
     PUPPET_GEM_VERSION: '~> 6'
 
@@ -36,6 +45,23 @@ parallel_spec-Ruby 2.4.5-Puppet ~> 5:
   image: ruby:2.4.5
   script:
     - bundle exec rake parallel_spec
+  only:
+    changes:
+      - Gemfile
+      - "*.{json,pp,rb,yml}"
   variables:
     PUPPET_GEM_VERSION: '~> 5'
 
+pdk build:
+    stage: build
+    image: ccaum/puppet-dev-tools:latest
+    script: pdk build
+    only:
+      changes:
+        - Gemfile
+        - "*.{json.pp,rb,yml}"
+      refs:
+        - master
+    artifacts:
+      paths:
+        - pkg/
